--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -7,26 +9,118 @@
 
 .navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: #FFD700;
     position: fixed; 
     top: 0; 
     width: 100%; 
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 30px;
+    padding-right: 20px;
+}
+
+.navbar h3 {
+    font-weight: 600;
 }
 
 .navbar a {
     float: left;
     display: block;
-    color: #f2f2f2;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
 .navbar a:hover {
-    background: #ddd;
-    color: black;
+    background: black;
+    color: white;
 }
 
 main {
     margin-top: 50px; 
 }
+
+/*SECTION ONE*/
+
+.home {
+    padding-top: 150px;
+    padding-bottom: 100px;
+}
+
+.home-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.pic {
+    width: 15%;
+    border-radius: 50%;
+    border: 2px solid #FFD700;
+    margin-bottom: 20px;
+}
+
+.home-container h1 {
+    margin-bottom: 10px;
+}
+
+/*SECTION ONE*/
+
+/*SECTION TWO*/
+
+.about {
+    padding-top: 150px;
+    padding-bottom: 150px;
+}
+
+.about-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-container h1 {
+    font-size: 50px;
+    color: #FFD700;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+    margin-bottom: 30px;
+}
+
+.about-container p {
+    font-size: large;
+    text-align: center;
+    padding-left: 50px;
+    padding-right: 50px;
+    font-weight: 500;
+    line-height: 2.0;
+}
+
+/*SECTION TWO*/
+
+/*SECTION THREE*/
+
+.skills {
+    padding-top: 150px;
+    padding-bottom: 100px;
+}
+
+.skills-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.pic-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+/*SECTION THREE*/
