--- a/stylesheet.css
+++ b/stylesheet.css
@@ -117,10 +117,23 @@ main {
     align-items: center;
 }
 
+.skills-container h1 {
+    font-size: 50px;
+    color: #FFD700;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+    margin-bottom: 100px;
+}
+
 .pic-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
+
+.pic2 {
+    margin-right: 50px;
+}
+
 
 /*SECTION THREE*/
