--- a/stylesheet.css
+++ b/stylesheet.css
@@ -146,5 +146,79 @@ span h1 {
     margin-right: 50px;
 }
 
-
 /*SECTION THREE*/
+
+/*SECTION FOUR*/
+
+.works {
+    padding-top: 150px;
+    padding-bottom: 100px;
+}
+
+.works-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.works-container h1 {
+    font-size: 50px;
+    color: #FFD700;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: black;
+    margin-bottom: 30px;
+}
+
+.works-pics {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-evenly;
+    align-items: center;
+}
+
+/*SECTION FOUR*/
+
+/*SECTION FIVE*/
+
+.contact {
+    padding-top: 150px;
+    padding-bottom: 100px;
+}
+
+.hireme {
+    display: flex; 
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 80px;
+}
+
+.hireme h1 {
+    margin-bottom: 20px;
+}
+
+.hireme button {
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
+    background-color: black;
+    font-weight: 600;
+    color: #FFD700;
+}
+
+.contact-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.form1 button {
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
+    background-color: black;
+    font-weight: 600;
+    color: #FFD700;
+}
